@@ -83,6 +83,7 @@ MACRO(add_nscp_py_test name script)
 			unit
 			--language python
 			--script ${script}
+			--define "/paths:module-path=\\\${base-path}/modules"
 		)
 ENDMACRO(add_nscp_py_test)
 MACRO(add_nscp_py_test_case name script case)
@@ -92,6 +93,7 @@ MACRO(add_nscp_py_test_case name script case)
 			--language python
 			--script ${script}
 			--case ${case}
+			--define "/paths:module-path=\\\${base-path}/modules"
 		)
 ENDMACRO(add_nscp_py_test_case)
 
@@ -163,8 +165,18 @@ ELSE()
 ENDIF()
 ENDMACRO()
 
-MACRO(NSCP_INSTALL _TARGET _FOLDER)
-	INSTALL(TARGETS ${_TARGET} LIBRARY DESTINATION ${_FOLDER})
+MACRO(NSCP_INSTALL_MODULE _TARGET)
+	IF(WIN32)
+		SET(_FOLDER "${MODULE_SUBFOLDER}")
+		INSTALL(TARGETS ${_TARGET} 
+			RUNTIME DESTINATION ${_FOLDER}
+			LIBRARY DESTINATION ${_FOLDER}
+			ARCHIVE DESTINATION ${_FOLDER}
+			)
+	ELSE()
+		SET(_FOLDER ${MODULE_TARGET_FOLDER})
+		INSTALL(TARGETS ${_TARGET} LIBRARY DESTINATION ${_FOLDER})
+	ENDIF()
 	if (MSVC11)
 		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${BUILD_TARGET_ROOT_PATH}/${_FOLDER})
 		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BUILD_TARGET_ROOT_PATH}/${_FOLDER})
@@ -173,20 +185,20 @@ MACRO(NSCP_INSTALL _TARGET _FOLDER)
 	endif()
 ENDMACRO()
 
-MACRO(NSCP_INSTALL_MODULE _TARGET)
-	IF(WIN32)
-		NSCP_INSTALL(${_TARGET} ${MODULE_SUBFOLDER})
-	ELSE()
-		NSCP_INSTALL(${_TARGET} ${MODULE_TARGET_FOLDER})
-	ENDIF()
-ENDMACRO()
-
 MACRO(NSCP_INSTALL_LIBRARY _TARGET)
 	IF(WIN32)
-		NSCP_INSTALL(${_TARGET} .)
+		SET(_FOLDER ".")
+		INSTALL(TARGETS ${_TARGET} RUNTIME DESTINATION ${_FOLDER} LIBRARY DESTINATION ${_FOLDER})
 	ELSE()
-		NSCP_INSTALL(${_TARGET} ${LIB_TARGET_FOLDER})
+		SET(_FOLDER ${LIB_TARGET_FOLDER})
+		INSTALL(TARGETS ${_TARGET} LIBRARY DESTINATION ${_FOLDER})
 	ENDIF()
+	if (MSVC11)
+		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${BUILD_TARGET_ROOT_PATH}/${_FOLDER})
+		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BUILD_TARGET_ROOT_PATH}/${_FOLDER})
+		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BUILD_TARGET_ROOT_PATH}/${_FOLDER})
+		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_TARGET_ROOT_PATH}/${_FOLDER})
+	endif()
 ENDMACRO()
 
 
@@ -194,7 +206,6 @@ MACRO(NSCP_MAKE_LIBRARY _TARGET _SRCS)
 	IF(USE_STATIC_RUNTIME)
 		ADD_LIBRARY(${_TARGET} STATIC ${_SRCS})
 		IF(CMAKE_COMPILER_IS_GNUCXX AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
-			MESSAGE(STATUS "${_TARGET}: Adding -fPIC")
 			SET_TARGET_PROPERTIES(${_TARGET} PROPERTIES COMPILE_FLAGS "-fPIC")
 		ENDIF(CMAKE_COMPILER_IS_GNUCXX AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
 		set_target_properties(${_TARGET} PROPERTIES
@@ -215,7 +226,8 @@ ENDMACRO()
 
 MACRO(NSCP_FORCE_INCLUDE _TARGET _SRC)
 	IF(WIN32)
-		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS "/FI\"${_SRC}\"")
+		string(REPLACE "/" "\\" WINSRC "${_SRC}")
+		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS "/FI\"${WINSRC}\"")
 	ELSE(WIN32)
 		IF(USE_STATIC_RUNTIME AND CMAKE_COMPILER_IS_GNUCXX AND "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
 			SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS "-fPIC -include \"${_SRC}\"")
