@@ -50,7 +50,7 @@ IF (HAVE_LUA)
 			ADD_DEFINITIONS(-DLUA_LIB)
 		ENDIF()
 
-		NSCP_MAKE_LIBRARY(${TARGET} ${SRCS})
+		NSCP_MAKE_LIBRARY(${TARGET} "${SRCS}")
 		
 		SET(LUA_LIB lua PARENT_SCOPE)
 		
