@@ -43,10 +43,8 @@ IF(WIN32)
 ENDIF(WIN32)
 
 ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})
-NSCP_MAKE_LIBRARY(${TARGET} ${SRCS})
-IF(WIN32)
-	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS "/FI\"${BUILD_ROOT_FOLDER}\\include\\nscapi\\dll_defines_protobuf.hpp\"")
-ENDIF(WIN32) 
+NSCP_MAKE_LIBRARY(${TARGET} "${SRCS}")
+NSCP_FORCE_INCLUDE(${TARGET} "${BUILD_ROOT_FOLDER}/include/nscapi/dll_defines_protobuf.hpp")
 
 SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "libraries")
 TARGET_LINK_LIBRARIES(${TARGET}
