@@ -19,7 +19,7 @@ IF(WIN32)
 		${PROTO_IPC_SRC_H}
 	)
 ENDIF(WIN32)
-NSCP_MAKE_LIBRARY(${TARGET} ${SRCS})
+NSCP_MAKE_LIBRARY(${TARGET} "${SRCS}")
 NSCP_FORCE_INCLUDE(${TARGET} ${BUILD_ROOT_FOLDER}/include/nscapi/dll_defines_protobuf.hpp)
 
 TARGET_LINK_LIBRARIES(${TARGET}
@@ -48,12 +48,12 @@ IF(PROTOC_GEN_JSON_FOUND AND JSON_SPIRIT_FOUND)
 		ADD_DEFINITIONS(-Djson_protobuf_NOLIB)
 		ADD_DEFINITIONS(-DJSON_SPIRIT_STATIC_LINKED)
 	ENDIF(USE_STATIC_RUNTIME)
-	NSCP_MAKE_LIBRARY(${TARGET} ${SRCS})
+	NSCP_MAKE_LIBRARY(${TARGET} "${SRCS}")
 	NSCP_FORCE_INCLUDE(${TARGET} ${BUILD_ROOT_FOLDER}/include/nscapi/dll_defines_protobuf.hpp)
 
 	TARGET_LINK_LIBRARIES(${TARGET}
 		${PROTOBUF_LIBRARY}
-		protobuf
+		nscp_protobuf
 		json_spirit
 	)
 ENDIF()
@@ -85,12 +85,12 @@ IF (PROTOC_GEN_LUA_FOUND AND HAVE_LUA)
 	ELSE(USE_STATIC_RUNTIME)
 		ADD_DEFINITIONS(-Dlua_protobuf_EXPORTS)
 	ENDIF(USE_STATIC_RUNTIME)
-	NSCP_MAKE_LIBRARY(${TARGET} ${SRCS})
+	NSCP_MAKE_LIBRARY(${TARGET} "${SRCS}")
 	NSCP_FORCE_INCLUDE(${TARGET} ${BUILD_ROOT_FOLDER}/include/nscapi/dll_defines_protobuf.hpp)
 
 	TARGET_LINK_LIBRARIES(${TARGET}
 		${PROTOBUF_LIBRARY}
-		protobuf
+		nscp_protobuf
 		${LUA_LIB}
 	)
 
