@@ -48,7 +48,7 @@ IF(WIN32)
 	)
 ENDIF(WIN32)
 
-NSCP_MAKE_LIBRARY(${TARGET} ${SRCS})
+NSCP_MAKE_LIBRARY(${TARGET} "${SRCS}")
 
 TARGET_LINK_LIBRARIES(${TARGET}
 	${Boost_SYSTEM_LIBRARY}
