@@ -21,6 +21,7 @@ class cli_parser : public boost::noncopyable {
 	bool log_debug;
 	bool no_stderr;
 	std::vector<std::string> log_level;
+	std::vector<std::string> defines;
 	std::string settings_store;
 	std::vector<std::string> unknown_options;
 	
